--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ section .logos{padding-top: 110px;
 .bodyy{
     font-family: 'Caveat', cursive;
     background-color: #6E67B6;
+    color: #f7f5f0;
 
 
 }
@@ -140,14 +141,20 @@ div .color{
     padding-top: 320px;
     padding-left: 100px;
    width: 800px;
+   color: black;
    
   
 }
+
+
+
 h2{
     padding-top: 30px;
     font-weight: 1000;
 }
-.sassy{font-weight: 1000;}
+.sassy{font-weight: 1000;
+    color:  rgb(48, 44, 109);
+}
 h5{
     padding-top:30px ;
 }
@@ -187,7 +194,7 @@ background-position: center;
 }
 .logo a{
    color: rgba(5, 85, 95, 0.781);
-   font-size: 30px;
+   font-size: 25px;
  
    
    
@@ -195,6 +202,7 @@ background-position: center;
 }
 .logo a:hover{
    color: rgb(248, 3, 117);
+   
    
    
 }
@@ -214,22 +222,103 @@ background-position: center;
     display: flex;
    
     justify-content: center;
+
     
    
 }
-.myprofile{
-  margin-right: 400px;
+#Aboutmee{
+    padding-bottom:30px ;
+}
+.card2{
+    border-left:5px dotted wheat;
+box-shadow: 10px 10px 50px  rgb(237, 151, 240) ;
+padding: 25px;
+height: 500px;
 
-    padding: 20px;
-    background-image: url(media/pro.png);
-    background-position: center;
-    background-repeat: no-repeat;
+
+
+}
+.card3{
+    padding-top: 80px;}
+
+
+
+
+.my{
+    padding-bottom: 30px;
+}
+.myprofile{
+    width: 350px;
+  
+
+    
+   
 }
 .myprofile img{
     padding-top: 20px;
     padding-bottom: 30px;
 }
 .aboutme{
-    padding-left: 400px;
+    width: 600px;
+    margin-left: 200px;
 }
 
+.edu{
+    width: 500px;
+    border-left:5px dotted wheat;
+box-shadow: 10px 10px 50px  rgb(237, 151, 240) ;
+padding: 25px;
+height: 500px;
+    margin-right: 100px;
+}
+.exp{
+    width: 500px;
+    margin-left: 100px;
+    border-left:5px dotted wheat;
+    box-shadow: 10px 10px 50px  rgb(237, 151, 240) ;
+    padding: 25px;
+    height: 500px;
+}
+#career{
+    text-align: center;
+    padding-top: 90px;
+    justify-content: center;
+    display: flex;
+}
+.Career{
+    text-align: center;
+    padding-top: 100px;
+
+}
+.education{
+    padding-bottom: 30px;
+}
+.ab{
+    margin: 40px
+}
+.Contact{
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 60px;
+}
+
+.con{
+    text-align: center;
+}
+.div{
+    padding-top: 20px;
+    padding-bottom: 30px;
+   
+}
+#inbox{
+    padding-bottom: 50px;
+}
+
+
+footer{
+    text-align: center;
+    padding-bottom: 20px;
+    background-color: rgba(168, 188, 192, 0.849);
+    padding-top: 20px;
+    font-size: 15px;
+}
